--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,52 @@
-#background_header{
-    width: 100%;
-    height:20vh;
-    background-color: #019688;
+#background_header {
+  width: 100%;
+  height: 20vh;
+  background-color: #019688;
 }
+#background_body {
+  height: 80vh;
+  background: #e0e0e0;
+}
+#chatContainer {
+  position: fixed;
+  top: 0%;
+  bottom: 0%;
+  margin: auto;
+  width: 70%;
+  height: 90%;
+  background-color: #fff;
+  right: 0px;
+  left: 0px;
+  box-shadow: -1px 1px 5px rgba(#333, 0.2);
+  border-radius: 3px;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
 
-#background_body{
-    height:80vh;
-    background: #e0e0e0;
+  app-sidebar {
+    flex-basis: 30%;
+    display: block;
+    height: 100%;
+  }
 }
-#chatContainer{
-    position:fixed;
-    top:0%;
-    bottom:0%;
-    margin:auto;
-    width:70%;
-    height:90%;
-    background-color:#fff;
-    right:0px;
-    box-shadow:-1px 1px 5px rgb(#333,0.2);
-    border-radius:3px;
+#chat {
+  background-color: #f7f9fa;
+  flex-grow: 1;
+  #chatPlaceholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  h2 {
+    font-size: 35px;
+    font-weight: normal;
+  }
+  .separator {
+    width: 100%;
+    border-top: 1px solid #eaeaea;
+    margin:50px 0px;
+  }
+  p {
+    text-align: center;
+  }
 }
