--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,12 @@
 <div id="container">
-  <div id="header"></div>
+  <div id="header">
+    <div class="pictures">
+
+    </div>
+    <div class="name">
+
+    </div>
+  </div>
   <div id="body">
     <div
       class="message"
@@ -7,12 +14,13 @@
       *ngFor="let message of conversation.message"
     >
       {{ message.body }}
+      <div class="time">{{message.time}}</div>
     </div>
   </div>
   <div id="footer">
     <div id="smileyIcon"></div>
     <div id="textarea">
-      <textarea> </textarea>
+      <textarea (keyup.enter)="submitMessage($event)"></textarea>
     </div>
     <div id="micIcon"></div>
   </div>
